# flowback

./: .prettierrc  claude.md
anchor/flowback/: Anchor.toml
anchor/flowback/programs/flowback/: Cargo.toml
anchor/flowback/programs/flowback/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
anchor/flowback/programs/flowback/src/instructions/: escrow_deposit.rs  escrow_init.rs  escrow_withdraw.rs  initialize.rs  settle_cashback.rs  settle_from_escrow.rs  update_config.rs
anchor/flowback/programs/flowback/tests/: test_escrow.rs  test_initialize.rs
client/: next.config.ts  package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/lib/: flowback-relay.ts
client/src/providers/: wallet-provider.tsx
client/src/styles/: flowback-calculator.css  flowback-surfaces.css  flowback-swap.css
docs/: package.json  pnpm-lock.yaml
docs/app/: global.css
docs/app/[[...slug]]/: layout.tsx  page.tsx
docs/components/: docs-footer.tsx  mermaid.tsx
docs/content/docs/: api-reference.mdx  (+4 more)
docs/lib/: layout.shared.tsx
relay/: Dockerfile  drizzle.config.ts  package.json  pnpm-lock.yaml
relay/src/: index.ts  rate-limit.ts
scripts/: .gitignore  README.md  init-protocol.ts  package.json  pnpm-lock.yaml  searcher-bot.ts  send-intent.ts  tsconfig.json  verify-reimbursement.ts
scripts/lib/: util.ts
sdk/: LICENSE  README.md  package.json  pnpm-lock.yaml  rolldown.config.ts
sdk/src/: auth.ts  client.ts  index.ts  jito-tip-accounts.ts  signer.ts  types.ts
seed-bot/: package.json
seed-bot/src/: index.ts
(+65 files in other folders)
